--- a/Acme.RemoteFlights.Domain/Acme.RemoteFlights.Domain.csproj
+++ b/Acme.RemoteFlights.Domain/Acme.RemoteFlights.Domain.csproj
@@ -8,6 +8,11 @@
     <PackageReference Include="AutoMapper" Version="6.2.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="2.0.2" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.1" />
+    <PackageReference Include="Polly" Version="5.8.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Acme.RemoteFlights.Shared\Acme.RemoteFlights.Shared.csproj" />
   </ItemGroup>
 
   <ItemGroup>
