--- a/Acme.RemoteFlights.Api/Acme.RemoteFlights.Api.csproj
+++ b/Acme.RemoteFlights.Api/Acme.RemoteFlights.Api.csproj
@@ -18,6 +18,7 @@
     <PackageReference Include="AutoMapper" Version="6.2.2" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.6" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics" Version="2.0.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.TagHelpers" Version="2.0.3" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.1" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.1" />
     <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="2.3.0" />
@@ -49,5 +50,9 @@
     <TypeScriptMapRoot />
     <TypeScriptSourceRoot />
   </PropertyGroup>
+
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+    <Exec Command="npm start" />
+  </Target>
 
 </Project>
